--- a/results.html
+++ b/results.html
@@ -394,7 +394,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
             <a class="navbar-brand" href="#">CAT Test Results</a>
-            <a href="CAT.html" class="btn btn-outline-light">
+            <a href="index.html" class="btn btn-outline-light">
                 <i class="fas fa-home"></i> Home
             </a>
         </div>
@@ -550,7 +550,7 @@
                     icon: 'error',
                     confirmButtonText: 'OK'
                 }).then(() => {
-                    window.location.href = 'CAT.html';
+                    window.location.href = 'index.html';
                 });
             }
         };
