--- a/history.html
+++ b/history.html
@@ -391,8 +391,8 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
-            <a class="navbar-brand" href="CAT.html">CAT Prep</a>
-            <a href="CAT.html" class="btn btn-outline-light">
+            <a class="navbar-brand" href="index.html">CAT Prep</a>
+            <a href="index.html" class="btn btn-outline-light">
                 <i class="fas fa-home"></i> Home
             </a>
         </div>
@@ -428,7 +428,7 @@
                         <i class="fas fa-history"></i>
                         <h4>No Test History</h4>
                         <p class="text-muted">Take a test to see your history here</p>
-                        <a href="CAT.html" class="btn btn-primary">
+                        <a href="index.html" class="btn btn-primary">
                             <i class="fas fa-play"></i> Start a Test
                         </a>
                     </div>
