--- a/performance.html
+++ b/performance.html
@@ -682,8 +682,8 @@
 <body>
     <nav class="navbar navbar-expand-lg">
         <div class="container">
-            <a class="navbar-brand" href="CAT.html">CAT Prep</a>
-            <a href="CAT.html" class="btn btn-outline-light">
+            <a class="navbar-brand" href="index.html">CAT Prep</a>
+            <a href="index.html" class="btn btn-outline-light">
                 <i class="fas fa-home"></i> Home
             </a>
         </div>
@@ -738,7 +738,7 @@
                         <i class="fas fa-chart-line fa-3x mb-3 text-muted"></i>
                         <h4>No Performance Data</h4>
                         <p class="text-muted">Take some tests to see your performance analysis</p>
-                        <a href="CAT.html" class="btn btn-primary">
+                        <a href="index.html" class="btn btn-primary">
                             <i class="fas fa-play"></i> Start a Test
                         </a>
                     </div>
